Servicedeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 10
  selector:
    matchExpressions:
    - {key: app, operator: In, values: [nginx-app, demo-app]}
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx-app
    spec:
      containers:
      - name: mynginx-con
        image: nginx:1.18.0
        ports:
        - containerPort: 80
        imagePullPolicy: Always
