cmdarenvremoved.yaml
apiVersion: v1
kind: Pod
metadata:
  name: command-demo-nginx
  labels:
    purpose: demonstrate-command
spec:
  containers:
  - name: command-demo-container
    image: nginx
