configmapvolume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod
  labels:
    name: configmap-pod
spec:
  containers:
  - name: configmap-pod
    image: nginx
    volumeMounts:
    - name: config-vol
      mountPath: "/data"
      readOnly: true
  volumes:
  - name:  config-vol
    configMap:
      name: mysettings-config4
