dockersecrete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhelloapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myhelloapp
  template:
    metadata:
      labels:
        app: myhelloapp
    spec:
      containers:
      - name: myhelloapp-container
        image: gbalaji090/mynginxgb:v1
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: mydockersecrete4
