podwithconfigmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mynginx
  labels:
    environment: production
    tier: frontend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
