podwithenvironment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mynginx3
  labels:
    environment: production
    tier: frontend
spec:
  containers:
  - name: nginx
    image: nginx
