bgdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-blue
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx-app-blue
  template:
    metadata:
      labels:
        app: nginx-app-blue
    spec:
      containers:
      - name: mynginx-container
        image: nginx:1.18.0
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: my-service-lb-blue
spec:
  type: LoadBalancer
  selector:
    app: nginx-app-blue
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-green
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx-app-green
  template:
    metadata:
      labels:
        app: nginx-app-green
    spec:
      containers:
      - name: mynginx-container
        image: httpd
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: my-service-lb-green
spec:
  type: LoadBalancer
  selector:
    app: nginx-app-green
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
