canarydeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: mynginx-container
        image: nginx:1.18.0
        ports:
        - containerPort: 80



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-canary
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: mynginx-container
        image: httpd
        ports:
        - containerPort: 80



---
apiVersion: v1
kind: Service
metadata:
  name: my-service-lb
spec:
  type: LoadBalancer
  selector:
    app: nginx-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
