loadbalancere.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myappnginx-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: mynginx-container
        image: nginx
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: my-service-lb
spec:
  type: LoadBalancer
  selector:
    app: nginx-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
