mysqlpvc.yaml

YAML file: 

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-ss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "mysql-pod"
  serviceName: "mysql"
  template:
    metadata:
      labels:
        app: "mysql-pod"
    spec:
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      containers:
      - image: mysql:5.6
        name: mysql
      ports:
      - containerPort: 3306
        name: mysql
      volumeMounts:
      - name: mysql-persistent-storage
        mountPath: /var/lib/mysql

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-srv
spec:
  ports:
  - port: 3306
  selector:
    app: "mysql"
