nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myappnginx1-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: mynginx-container
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-service-np
spec:
  type: NodePort
  selector:
    app: nginx-app
  ports:
  - protocol: TCP
    NodePort: 30008
    port: 8080
    targetPort: 80
