servicenew.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-cip
spec:
  type: ClusterIP
  selector:
    app: nginx-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
