servicesdeploymentboth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 10
  selector:
    matchExpressions:
    - {key: app, operator: In, values: [nginx-app, demo-app]}
  template:
    metadata:
      name: nginx-pod
      labels:
        app: nginx-app
    spec:
      containers:
      - name: mynginx-con
        image: nginx:1.18.0
        ports:
        - containerPort: 80
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: my-service-cip
spec:
  type: ClusterIP
  selector:
    app: nginx-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
